# memflow

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGES.md  CONTRIBUTE.md  Cargo.toml  LICENSE  README.md  RELEASE.md  TODO.md  memflow.toml  notes.txt  runner.sh  setperms.sh  syms.txt  syms.txt.REMOVED.git-id
connectors/flow-bridge/: Cargo.toml
connectors/flow-bridge/examples/: read_bridge.rs
connectors/flow-bridge/src/: client.rs  lib.rs  server.rs
connectors/flow-coredump/: Cargo.toml
connectors/flow-coredump/examples/: read_coredump.rs
connectors/flow-coredump/src/: lib.rs
connectors/flow-kvm/: Cargo.toml
connectors/flow-kvm/src/: lib.rs
connectors/flow-mmap/: Cargo.toml
connectors/flow-mmap/src/: lib.rs
connectors/flow-pcileech/: Cargo.toml
connectors/flow-pcileech/examples/: read_pcileech.rs
connectors/flow-pcileech/src/: fpga.rs  ft60x.rs  lib.rs
connectors/flow-qemu-bridge/: Cargo.toml
connectors/flow-qemu-bridge/src/: cpu.rs  lib.rs  mem.rs  native.rs
connectors/flow-qemu-procfs/: Cargo.toml
connectors/flow-qemu-procfs/examples/: read_procfs.rs
connectors/flow-qemu-procfs/src/: lib.rs
connectors/memflow-coredump/: Cargo.toml
connectors/memflow-coredump/examples/: read_coredump.rs
connectors/memflow-coredump/src/: lib.rs
connectors/memflow-kvm/: Cargo.toml
connectors/memflow-kvm/src/: lib.rs
connectors/memflow-pcileech/: Cargo.toml
connectors/memflow-pcileech/examples/: read_pcileech.rs
connectors/memflow-pcileech/src/: fpga.rs  ft60x.rs  lib.rs
connectors/memflow-qemu-procfs/: Cargo.toml
connectors/memflow-qemu-procfs/examples/: read_procfs.rs
connectors/memflow-qemu-procfs/src/: lib.rs
connectors/memflow-stdio/: Cargo.toml
connectors/memflow-stdio/src/: lib.rs
flow-bench/: Cargo.toml
flow-bench/benches/: batcher.rs  read_dummy.rs  read_win32.rs
flow-bench/src/: lib.rs  phys.rs  vat.rs  virt.rs
flow-bridge/: Cargo.toml
flow-bridge/src/: client.rs  server.rs
flow-cli/: Cargo.toml  build.rs
flow-cli/src/: cli.rs  cli.yml  config.rs  derive.rs  init.rs  main.rs
flow-cli/src/init/: init_bridge.rs  init_linux.rs  init_other.rs  init_qemu_procfs.rs  mod.rs
flow-core/: Cargo.toml  build.rs
flow-core/address/: Cargo.toml
flow-core/address/src/: address.rs  length.rs  lib.rs
flow-core/arch/: Cargo.toml
flow-core/arch/src/: lib.rs  x64.rs  x86.rs  x86_pae.rs
flow-core/bridge/: Cargo.toml
flow-core/bridge/examples/: read.rs
flow-core/examples/: read.rs  read_bridge.rs  read_procfs.rs
flow-core/mem/: Cargo.toml
flow-core/src/: addr.rs  arch.rs  cpu.rs  error.rs  ida_pattern.rs  lib.rs  machine.rs  mem.rs  os.rs  proc.rs
flow-core/vat/: Cargo.toml
flow-ffi/: .gitignore  Cargo.toml  TODO.md
flow-ffi/src/: bridge.rs  lib.rs  mem.rs  qemu_procfs.rs  win32.rs
flow-qemu/: Cargo.toml  build.rs
flow-qemu/bridge/: Cargo.toml
flow-qemu/examples/: bridge_read.rs  monitor_read.rs  qmp_read.rs
flow-qemu/src/: bridge.rs  lib.rs  monitor.rs  qmp.rs
flow-va/: Cargo.toml
flow-va/src/: lib.rs  va.rs  x64.rs  x86.rs  x86_pae.rs
flow-win32/: Cargo.toml
flow-win32/benches/: read.rs  vat.rs
flow-win32/examples/: read_bench.rs  read_keys.rs  write_keys.rs
flow-win32/src/: cache.rs  dtb.rs  error.rs  lib.rs  ntos.rs  pe.rs  sysproc.rs  win.rs  win32.rs
memflow/: Cargo.toml
memflow-bench/: Cargo.toml  README.md
memflow-bench/benches/: batcher.rs  read_dummy.rs  read_win32.rs
memflow-bench/src/: lib.rs  phys.rs  util.rs  vat.rs  virt.rs
memflow-bench/vagrant/: Vagrantfile
memflow-core/: Cargo.toml
memflow-core-ffi/: .gitignore  Cargo.toml  build.rs  cbindgen.toml
memflow-core-ffi/examples/: a.out.REMOVED.git-id  phys_mem.c
memflow-core-ffi/src/: lib.rs  log.rs  process.rs  win32.rs
memflow-core/src/: error.rs  lib.rs
memflow-derive/: Cargo.toml  README.md
memflow-derive/src/: batcher.rs  lib.rs
memflow-derive/tests/: derive_test.rs
memflow-ffi/: .gitignore  Cargo.toml  Makefile  README.md  binddestr.h  bindgen.sh  build.rs  cbindgen.toml  cglue.toml  memflow.h  memflow.hpp  memflow_cpp.h  memflow_go.yml  memflow_support.h  verify_headers.sh
memflow-ffi/examples/: Makefile  phys_mem.c
memflow-ffi/scripts/: bindgen.sh  bindgen_check.sh  bindgen_prereq.sh
memflow-ffi/src/: lib.rs  log.rs  process.rs  util.rs
memflow-win32/: Cargo.toml  README.md  build.rs
memflow-win32-ffi/: .gitignore  Cargo.toml  README.md  bindgen.sh  build.rs  cbindgen.toml  memflow_win32.h  memflow_win32_cpp.h
memflow-win32-ffi/examples/: Makefile  dump_header.c  process_list.c
memflow-win32-ffi/src/: lib.rs
memflow-win32/examples/: dump_offsets.rs  generate_offsets.rs  integration.rs  multithreading.rs  read_bench.rs  read_keys.rs
memflow-win32/offsets/: 10_0_18362_0AFB69F5FD264D54673570E37B38A3181.toml  10_0_18362_X64_0AFB69F5FD264D54673570E37B38A3181.toml  10_0_19041_1B1D6AA205E1C87DC63A314ACAA50B491.toml  10_0_19041_1C9875F76C8F0FBF3EB9A9D7C1C274061.toml  10_0_19041_BBED7C2955FBE4522AAA23F4B8677AD91.toml  10_0_19041_X64_1C9875F76C8F0FBF3EB9A9D7C1C274061.toml  10_0_19041_X64_BBED7C2955FBE4522AAA23F4B8677AD91.toml  10_0_19041_X86_1B1D6AA205E1C87DC63A314ACAA50B491.toml  10_0_22000_X86_55678BC384F099B6ED05E9E39046924A1.toml  4_0_1381.toml  4_0_1381_X86.toml  5_2_3790_82DCF67A38274C9CA99B60B421D2786D2.toml  5_2_3790_X64_82DCF67A38274C9CA99B60B421D2786D2.toml  6_1_7601_684DA42A30CC450F81C535B4D18944B12.toml  6_1_7601_ECE191A20CFF4465AE46DF96C22638451.toml  6_1_7601_X64_ECE191A20CFF4465AE46DF96C22638451.toml  6_1_7601_X86_684DA42A30CC450F81C535B4D18944B12.toml  BBED7C2955FBE4522AAA23F4B8677AD91.toml
memflow-win32/src/: error.rs  lib.rs  plugins.rs  win32.rs
memflow/examples/: batcher.rs  cached_view.rs  envars_list.rs  integration.rs  kernel_exports.rs  kernel_maps.rs  kernel_modules.rs  kernel_structures.rs  keyboard.rs  mem_maps.rs  module_info.rs  module_list.rs  multithreading.rs  open_process.rs  process_list.rs  read_bench.rs  target_list.rs
memflow/src/: dummy.rs  error.rs  lib.rs
nostd-test/: Cargo.toml
nostd-test/.cargo/: config
nostd-test/src/: main.rs
(+461 files in other folders)
