[profile.bench]
debug = true

[workspace]
members = [
    "memflow",
    "memflow-ffi",
    "memflow-bench",
]
default-members = [
    "memflow",
    "memflow-ffi",
    "memflow-bench",
]

exclude = [
    "nostd-test"
]

[patch.crates-io]
goblin = { git = "https://github.com/h33p/goblin", branch = "lossy-macho" }
