[package]
name = "flow-bridge"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"

[build-dependencies]
capnpc = "0.10.1"

[dependencies]
libc-print = "0.1.11"
tokio = "0.1.22"
capnp = "0.10.3"
capnp-rpc = "0.10.0"
address = { path = "../flow-core/address" }
arch = { path = "../flow-core/arch" }
mem = { path = "../flow-core/mem" }
vat = { path = "../flow-core/vat" }
log = { version = "0.4.8", default-features = false }
url = "2.1.0"

# example deps
clap = "2.33.0"

[[example]]
name = "read"
path = "examples/read.rs"
