[package]
name = "flow-cli"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
pretty_env_logger = "0.3.1"
flow-core = { path = "../flow-core" }
flow-bridge = { path = "../flow-bridge" }
flow-win32 = { path = "../flow-win32" }
goblin = { git = "https://github.com/ko1N/goblin" }
pdb = { git = "https://github.com/willglynn/pdb" }
url = "2.1.0"