[package]
name = "flow-cli"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"

[build-dependencies]
clap = { version = "2.33.0", features = ["yaml"] }

[dependencies]
clap = { version = "2.33.0", features = ["yaml"] }
toml = "0.5"
serde = "1.0.97"
serde_derive = "1.0"
simple_logger = "1.0.1"
log = "0.4.8"
flow-core = { path = "../flow-core" }
flow-derive = { path = "../flow-derive" }
flow-win32 = { path = "../flow-win32" }
goblin = { git = "https://github.com/ko1N/goblin" }
pdb = { git = "https://github.com/willglynn/pdb" }
url = "2.1.0"
win_key_codes = "0.1.2"
