[package]
name = "flow-cli"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"

[build-dependencies]
clap = { version = "2.33.0", features = ["yaml"] }

[dependencies]
flow-core = { path = "../flow-core" }
flow-derive = { path = "../flow-derive" }
flow-win32 = { path = "../flow-win32" }
clap = { version = "2.33.0", features = ["yaml"] }
toml = "0.5"
serde = "1.0.97"
serde_derive = "1.0"
simple_logger = "1.0.1"
log = "0.4.8"
libc = "0.2.69"
pdb = { git = "https://github.com/willglynn/pdb" }
pelite = { git = "https://github.com/CasualX/pelite", branch = "master" }
url = "2.1.0"
win_key_codes = "0.1.2"
flow-bridge = { path = "../connectors/flow-bridge", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
flow-qemu-procfs = { path = "../connectors/flow-qemu-procfs", optional = true }

[features]
default = ["connector-qemu-procfs"]
connector-bridge = ["flow-bridge"]
connector-qemu-procfs = ["flow-qemu-procfs"]
