[package]
name = "flow-core"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"

[dependencies]
dataview = { version = "0.1", features = ["derive_pod"] }
byteorder = "1.3.2"
log = { version = "0.4.8", default-features = false }
regex = "1.3.1"
bitflags = "1.2.1"
coarsetime = "0.1.13"
flow-derive = { path = "../flow-derive" }
#unicorn = { version = "0.9.1", optional = true }

[dev-dependencies]
x86_64 = { version = "0.10.2", default-features = false, features = ["stable"] }
rand = "0.7.3"

[features]
default = []
bridge = [] # enables the connector bridge (requires tokio)
#emulator = ["unicorn"] # enables the process emulator (requires unicorn engine)
