[package]
name = "flow-core"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"

[dependencies]
dataview = { version = "0.1", features = ["derive_pod"] }
byteorder = "1.3.2"
log = { version = "0.4.8", default-features = false }
regex = "1.3.1"
bitflags = "1.2.1"
coarsetime = "0.1.13"
flow-derive = { path = "../flow-derive" }
smallvec = "1.4.0"
either = "1.5.3"
#unicorn = { version = "0.9.1", optional = true }
arrayvec = "0.5.1"
x86_64 = { version = "0.10.2", optional = true, default-features = false, features = ["stable"] }
rand = { version = "0.7.3", optional = true }
bumpalo = { version = "3.3.0", features = ["collections"] }

[dev-dependencies]
x86_64 = { version = "0.10.2", default-features = false, features = ["stable"] }
rand = { version = "0.7.3" }

[features]
default = []
dummy_mem = ["x86_64", "rand"]
bridge = [] # enables the connector bridge (requires tokio)
#emulator = ["unicorn"] # enables the process emulator (requires unicorn engine)
