[package]
name = "flow-core"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"

[dependencies]
dataview = { version = "0.1", features = ["derive_pod"] }
byteorder = "1.3.2"
log = { version = "0.4.8", default-features = false }
regex = "1.3.1"
bitflags = "1.2.1"
coarsetime = "0.1.13"
smallvec = "1.4.0"
either = "1.5.3"
#unicorn = { version = "0.9.1", optional = true }
arrayvec = "0.5.1"
x86_64 = { version = "0.11.0", optional = true, default-features = false, features = ["stable"] }
rand = { version = "0.7.3", optional = true }
rand_xorshift = { version = "0.2.0", optional = true }
bumpalo = { version = "3.3.0", features = ["collections"] }

[dev-dependencies]
x86_64 = { version = "0.11.0", default-features = false, features = ["stable"] }
rand = { version = "0.7.3" }
rand_xorshift = "0.2.0"

[features]
default = []
trace_mmu = [] # enables debug traces in the mmu (very verbose)
dummy_mem = ["x86_64", "rand", "rand_xorshift"]
bridge = [] # enables the connector bridge (requires tokio)
#emulator = ["unicorn"] # enables the process emulator (requires unicorn engine)
