[package]
name = "flow-ffi"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"

[lib]
name = "flow_ffi"
crate-type = ["cdylib"]

[dependencies]
flow-core = { path = "../flow-core" }
flow-win32 = { path = "../flow-win32" }
flow-qemu-procfs = { path = "../connectors/flow-qemu-procfs" }

log = "0.4.8"
simple_logger = "1.0.1"
