[package]
name = "flow-qemu"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"

[build-dependencies]
capnpc = "0.10.1"

[dependencies]
clap = "2.*"
tokio = "0.1.22"
capnp = "0.10.3"
capnp-rpc = "0.10.0"
bufstream = "0.*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gdb_remote = { git = "https://github.com/emoon/gdb-remote" }
gdb-remote-protocol = { git = "https://github.com/luser/rust-gdb-remote-protocol" }
address = { path = "../flow-core/address" }
arch = { path = "../flow-core/arch" }
mem = { path = "../flow-core/mem" }
log = { version = "0.*", default-features = false }
url = "2.1.0"

[[example]]
name = "monitor_read"
path = "examples/monitor_read.rs"

[[example]]
name = "qmp_read"
path = "examples/qmp_read.rs"

[[example]]
name = "bridge_read"
path = "examples/bridge_read.rs"
