[package]
name = "flow-va"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"

[features]
default = ["x64", "x64-pae", "x86"]
x64 = []
x64-pae = []
x86 = []

[dependencies]
address = { path = "../flow-core/address" }
arch = { path = "../flow-core/arch" }
mem = { path = "../flow-core/mem" }
byteorder = "1.*"
