[package]
name = "flow-win32"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"

[dependencies]
flow-core = { path = "../flow-core" }
log = { version = "0.4.8", default-features = false }
byteorder = "1.3.2"
num = "0.2.0"
goblin = { git = "https://github.com/ko1N/goblin" }
scroll = "0.9"
pretty-hex = "0.1.1"
clap = "2.33.0"
uuid = "0.8" # remove this if goblin has this built in
duma = "0.1.0"
dirs = "2.0.2"
pdb = { git = "https://github.com/willglynn/pdb" }
url = "2.1.0"
failure = { version = "0.1.6", features = [] }
