[package]
name = "flow-win32"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"

[dependencies]
flow-core = { path = "../flow-core" }
log = { version = "0.4.8", default-features = false }
byteorder = "1.3.2"
dataview = "0.1"
num = "0.2.0"
pelite = { git = "https://github.com/CasualX/pelite", branch = "master" }
scroll = "0.9"
pretty-hex = "0.1.1"
clap = "2.33.0"
uuid = "0.8" # remove this if pelite has this built in
duma = "0.1.0"
dirs = "2.0.2"
pdb = { git = "https://github.com/willglynn/pdb" }
url = "2.1.0"
failure = { version = "0.1.6", features = [] }
widestring = "0.4.0"

[dev_dependencies]
simple_logger = "1.0.1"
flow-qemu-procfs = { path = "../connectors/flow-qemu-procfs" }
win_key_codes = "0.1.2"
rand = "0.5"

[[example]]
name = "read_keys"
path = "examples/read_keys.rs"
