[package]
name = "flow-win32"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"

[dependencies]
flow-core = { path = "../flow-core" }
log = { version = "0.4.8", default-features = false }
byteorder = "1.3.2"
dataview = "0.1"
pelite = { git = "https://github.com/ko1n/pelite" }
uuid = "0.8" # remove this if pelite has this built in
pdb = "0.6.0"
widestring = "0.4.0"
no-std-compat = { version = "0.4.0", features = ["alloc"] }

# symbolstore
dirs = "2.0.2"
ureq = "1.2.0"
cursive = { version = "0.15.0", optional = true }
indicatif = { version = "0.15.0", optional = true }

[dev_dependencies]
simple_logger = "1.0.1"
flow-qemu-procfs = { path = "../connectors/flow-qemu-procfs" }
win_key_codes = "0.1.2"
rand = "0.5"
bencher = "0.1.5"

[features]
default = ["std", "download_progress"]
download_progress = ["cursive", "indicatif"]
std = ["no-std-compat/std"]
collections = []
alloc = []

[[example]]
name = "read_keys"
path = "examples/read_keys.rs"

[[example]]
name = "read_bench"
path = "examples/read_bench.rs"
