[package]
name = "memflow-bench"
version = "0.2.0-beta1"
authors = ["Aurimas Blažulionis <0x60@pm.me>", "ko1N <ko1N1337@gmail.com>"]
edition = "2018"
description = "benchmarks for the memflow physical memory introspection framework"
readme = "README.md"
homepage = "https://memflow.github.io"
repository = "https://github.com/memflow/memflow"
license = "MIT"
keywords = [ "memflow", "introspection", "memory", "dma" ]
categories = [ "memory-management", "os" ]
publish = false

[dependencies]
memflow = { version = "0.2.0-beta6", path = "../memflow", features = ["dummy_mem"] }
log = "^0.4.14"
rand = "^0.8.4"
rand_xorshift = "^0.3"

# This branch provides throughput plots
criterion = { git = "https://github.com/h33p/criterion.rs.git", branch = "tput" }

[dev-dependencies]
memflow = { version = "0.2.0-beta6", path = "../memflow", features = ["dummy_mem", "plugins"] }
simplelog = "^0.11.1"

[features]
default = []

[[bench]]
name = "read_dummy"
harness = false

[[bench]]
name = "read_win32"
harness = false

[[bench]]
name = "batcher"
harness = false
