[package]
name = "memflow-core-ffi"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
license = "MIT"
description = "C bindings for the memflow physical memory introspection framework"
homepage = "https://github.com/memflow/memflow"
repository = "https://github.com/memflow/memflow"
readme = "README.md"
keywords = [ "memflow", "introspection", "memory", "dma" ]
categories = [ "api-bindings", "memory-management", "os" ]

[lib]
name = "memflow_core_ffi"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
memflow-core = { version = "0.1", path = "../memflow-core" }
log = "0.4"
simple_logger = "1.0"

[features]
default = []

[build-dependencies]
proc-macro2 = "1"
cbindgen = "0.14.4"
