[package]
name = "memflow-core"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
license = "MIT"
description = "core components of the memflow physical memory introspection framework"
homepage = "https://github.com/memflow/memflow"
repository = "https://github.com/memflow/memflow"
readme = "README.md"

[dependencies]
dataview = { version = "0.1", features = ["derive_pod"] }
byteorder = { version = "1.3.2", default-features = false }
log = "0.4.8"
bitflags = "1.2.1"
coarsetime = { version = "0.1.13", optional = true }
smallvec = { version = "1.4.0", default-features = false }
arrayvec = { version = "0.5.1", default-features = false }
x86_64 = { version = "0.11.0", optional = true, default-features = false, features = ["stable"] }
rand = { version = "0.7.3", optional = true }
rand_xorshift = { version = "0.2.0", optional = true }
bumpalo = { version = "3.4.0", features = ["collections"] }
no-std-compat = { version = "0.4.0", features = ["alloc"] }
itertools = { version = "0.9.0", default-features = false }
vector-trees = { git = "https://github.com/h33p/vector-trees", features = ["bumpalo"] }

[dev-dependencies]
x86_64 = { version = "0.11.0", default-features = false, features = ["stable"] }
rand = { version = "0.7.3" }
rand_xorshift = "0.2.0"

[features]
default = ["std"]
trace_mmu = [] # enables debug traces in the mmu (very verbose)
dummy_mem = ["x86_64", "rand", "rand_xorshift"]
std = ["coarsetime", "no-std-compat/std"]
collections = []
alloc = []
