[package]
name = "memflow-core"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
license = "MIT"
description = "core components of the memflow physical memory introspection framework"
homepage = "https://github.com/memflow/memflow"
repository = "https://github.com/memflow/memflow"
readme = "README.md"

[dependencies]
dataview = { version = "0.1", features = ["derive_pod"] }
log = "0.4.8"
bitflags = "1.2"
coarsetime = { version = "0.1.13", optional = true }
x86_64 = { version = "0.11", optional = true, default-features = false, features = ["stable"] }
smallvec = { version = "1.4", default-features = false }
arrayvec = { version = "0.5", default-features = false }
rand = { version = "0.7", optional = true }
rand_xorshift = { version = "0.2", optional = true }
bumpalo = { version = "3.4", features = ["collections"] }
no-std-compat = { version = "0.4", features = ["alloc"] }
itertools = { version = "0.9", default-features = false }
vector-trees = { git = "https://github.com/h33p/vector-trees", features = ["bumpalo"] }
libloading = { version = "0.6", optional = true }
memmap = { version = "0.7", optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
dirs = { version = "3.0", optional = true }
hashbrown = "0.8"

[dev-dependencies]
x86_64 = { version = "0.11", default-features = false, features = ["stable"] }
rand = { version = "0.7" }
rand_xorshift = "0.2"
memflow-derive = { path = "../memflow-derive" }

[features]
default = ["std", "serde_derive", "inventory", "filemap"]
trace_mmu = [] # enables debug traces in the mmu (very verbose)
dummy_mem = ["x86_64", "rand", "rand_xorshift"]
std = ["coarsetime", "no-std-compat/std"]
collections = []
alloc = []
serde_derive = ["serde"]
inventory = ["libloading", "dirs"]
filemap = ["memmap"]
nightly = ["x86_64/nightly"]
