[package]
name = "memflow-ffi"
version = "0.1.5"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
description = "C bindings for the memflow physical memory introspection framework"
documentation = "https://docs.rs/memflow-ffi"
readme = "README.md"
homepage = "https://memflow.github.io"
repository = "https://github.com/memflow/memflow"
license-file = "../LICENSE"
keywords = [ "memflow", "introspection", "memory", "dma" ]
categories = [ "api-bindings", "memory-management", "os" ]

[badges]
maintenance = { status = "actively-developed" }
codecov = { repository = "github", branch = "master", service = "github" }

[lib]
name = "memflow_ffi"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
memflow = { version = "0.1", path = "../memflow" }
log = "0.4"
simple_logger = "1.9"

[features]
default = []
