[package]
name = "memflow-win32-ffi"
version = "0.1.1"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
license = "MIT"
description = "C bindings to memflow-win32"
homepage = "https://memflow.github.io"
repository = "https://github.com/memflow/memflow"
readme = "README.md"
keywords = [ "memflow", "introspection", "memory", "dma" ]
categories = [ "api-bindings", "memory-management", "os" ]

[lib]
name = "memflow_win32_ffi"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
memflow-win32 = { version = "0.1", path = "../memflow-win32" }
memflow = { version = "0.1", path = "../memflow" }
memflow-ffi = { version = "0.1", path = "../memflow-ffi" }
