[package]
name = "memflow-win32-ffi"
version = "0.1.5"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
description = "C bindings to memflow-win32"
documentation = "https://docs.rs/memflow-win32-ffi"
readme = "README.md"
homepage = "https://memflow.github.io"
repository = "https://github.com/memflow/memflow"
license-file = "../LICENSE"
keywords = [ "memflow", "introspection", "memory", "dma" ]
categories = [ "api-bindings", "memory-management", "os" ]

[badges]
maintenance = { status = "actively-developed" }
codecov = { repository = "github", branch = "master", service = "github" }

[lib]
name = "memflow_win32_ffi"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
memflow-win32 = { version = "0.1", path = "../memflow-win32" }
memflow = { version = "0.1", path = "../memflow" }
memflow-ffi = { version = "0.1", path = "../memflow-ffi" }
