[package]
name = "memflow-win32"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
description = "win32 integration of the memflow physical memory introspection framework"
homepage = "https://github.com/memflow/memflow"
repository = "https://github.com/memflow/memflow"
readme = "README.md"

[dependencies]
memflow-core = { path = "../memflow-core", default-features = false }
log = { version = "0.4.8", default-features = false }
dataview = "0.1"
pelite = { git = "https://github.com/ko1n/pelite", default-features = false }
widestring = { version = "0.4.2", default-features = false, features = ["alloc"] }
no-std-compat = { version = "0.4.0", features = ["alloc"] }
serde = { version = "1.0", optional = true, features = ["derive"] }

# symbolstore
dirs = { version = "2.0.2", optional = true }
ureq = { version = "1.2.0", optional = true }
pdb = { version = "0.6.0", optional = true }
pbr = { version = "1.0", optional = true }
progress-streams = { version = "1.1", optional = true }

[dev_dependencies]
simple_logger = "1.0.1"
win_key_codes = "0.1.2"
rand = "0.5"
bencher = "0.1.5"
clap = "2.33.0"
toml = "0.5"

[build_dependencies]
toml = "0.5"
dataview = "0.1"
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["std", "serde_derive", "symstore", "download_progress"]
std = ["no-std-compat/std", "memflow-core/std"]
collections = []
alloc = []
serde_derive = ["serde", "memflow-core/serde_derive"]
symstore = ["dirs", "ureq", "pdb"]
download_progress = ["pbr", "progress-streams"]

[[example]]
name = "dump_offsets"
path = "examples/dump_offsets.rs"

[[example]]
name = "read_keys"
path = "examples/read_keys.rs"

[[example]]
name = "read_bench"
path = "examples/read_bench.rs"
