[package]
name = "memflow"
version = "0.1.5"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
description = "core components of the memflow physical memory introspection framework"
documentation = "https://docs.rs/memflow"
readme = "../README.md"
homepage = "https://memflow.github.io"
repository = "https://github.com/memflow/memflow"
license-file = "../LICENSE"
keywords = [ "memflow", "introspection", "memory", "dma" ]
categories = [ "memory-management", "os" ]

[badges]
maintenance = { status = "actively-developed" }
codecov = { repository = "github", branch = "master", service = "github" }

[dependencies]
memflow-derive = { version = "0.1", path = "../memflow-derive" }
dataview = { version = "0.1", default-features = false }
log = "0.4"
bitflags = "1.2"
coarsetime = { version = "0.1", optional = true }
smallvec = { version = "1.4", default-features = false }
x86_64 = { version = "0.14.2", default-features = false }
rand = { version = "0.8", optional = true }
rand_xorshift = { version = "0.3", optional = true }
bumpalo = { version = "3.6", features = ["collections"] }
no-std-compat = { version = "0.4", features = ["alloc"] }
itertools = { version = "0.10", default-features = false }
memmap = { version = "0.7", optional = true }
hashbrown = "0.11"
fixed-slice-vec = "0.8.0"
#cglue = { version = "0.1.0", default-features = false }
cglue = { path = "../../cglue/cglue", default-features = false }

# plugins
libloading = { version = "0.7", optional = true }
dirs = { version = "3.0", optional = true }
goblin = { version = "0.4", optional = true }

serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
toml = { version = "0.5", optional = true }

[dev-dependencies]
rand = { version = "0.8" }
rand_xorshift = "0.3"
clap = "2.33"
simple_logger = "1.0"
rayon = "1.3.1"
colored = "2.0"

[features]
default = ["std", "serde_derive", "plugins", "filemap", "memmapfiles"]
trace_mmu = [] # enables debug traces in the mmu (very verbose)
dummy_mem = ["rand", "rand_xorshift"]
std = ["coarsetime", "no-std-compat/std", "cglue/std"]
serde_derive = ["serde", "cglue/serde"]
memmapfiles = ["toml", "serde_derive"]
plugins = ["libloading", "dirs", "goblin"]
filemap = ["memmap"]

[[example]]
name = "read_bench"
path = "examples/read_bench.rs"

[[example]]
name = "multithreading"
path = "examples/multithreading.rs"

[[example]]
name = "integration"
path = "examples/integration.rs"

[[example]]
name = "process_list"
path = "examples/process_list.rs"

[[example]]
name = "kernel_modules"
path = "examples/kernel_modules.rs"

[[example]]
name = "keyboard"
path = "examples/keyboard.rs"

[[example]]
name = "target_list"
path = "examples/target_list.rs"
